# LearnOpenGL

./: .gitignore  CMakeLists.txt
shaders/: default.fs  default.vs
src/: main.c  model.h  shader.h
